# amr-project

./: README.md
amr_arduino_code/: amr_arduino_code.ino
config/: slam_params.yaml
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/launch/: display.launch.py
src/amr_description/rviz/: amr_config.rviz
src/amr_description/urdf/: my_robot.urdf
src/amr_navigation/: CMakeLists.txt  package.xml
src/amr_navigation/launch/: navigation_launch.py
src/amr_navigation/maps/: idea_lab_map.pgm  idea_lab_map.yaml  ros_lab.pgm  ros_lab.yaml
src/amr_navigation/params/: nav2_params.yaml
src/amr_navigation/src/: navigate_w_replanning_only_if_path_becomes_invalid_custom_file.xml
src/amr_node/: package.xml  setup.py
src/amr_node/amr_node/: amr_node_latest.py
src/ydlidar_ros2_driver/config/: ydlidar.rviz  ydlidar_config.rviz
src/ydlidar_ros2_driver/launch/: ydlidar_launch.py  ydlidar_launch_view.py
src/ydlidar_ros2_driver/params/: ydlidar.yaml
